Navbar z-index bug fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,11 +193,11 @@ nav > ul > li:hover  a{
 
 /*Dropdown Menu*/
 nav > ul > li > ul {
-    display: none;
-    position: absolute;
+    display: none;    
     text-align: left;
     width: 160px;
     box-shadow: 0px 2px 2px;
+    position: absolute;
     z-index: 1px;
 }
 
@@ -350,6 +350,8 @@ aside label{
     box-shadow: 0px 0px 4px;
     font-size: 16px;    
     overflow: hidden;
+    position: relative;
+    z-index: -1;
 }
 
 .sections article{
@@ -366,7 +368,8 @@ aside label{
 .sticker  .stickerOne,
 .sticker .stickerTwo{
     position:absolute;
-    margin-top: -38px;
+    margin-top: 25px;
+    margin-left: 45px;
     z-index: 0;
 }
 
